TEIV API Uplift modifications
Issue-ID: SMO-195
